// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBeers Saga function should call the beerLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://api.punkapi.com/v2/beers?per_page=20&page=1",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getBeers Saga function should dispatch the beersLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://api.punkapi.com/v2/beers?per_page=20&page=1",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getSimilarBeers Saga function should call the error action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://api.punkapi.com/v2/beers?per_page=4&ibu_lt=20&ibu_gt=0&abv_lt=7&abv_gt=1&ebc_lt=20&ebc_gt=4",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getSimilarBeers Saga function should dispatch the similarBeersLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://api.punkapi.com/v2/beers?per_page=4&ibu_lt=20&ibu_gt=0&abv_lt=7&abv_gt=1&ebc_lt=20&ebc_gt=4",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
